queryparser/src/main/java/antlr/QueryLanguageParser.java
package antlr;// Generated from QueryLanguage.g4 by ANTLR 4.8

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QueryLanguageParser extends Parser {
    public static final int
            EQ = 1, LBR = 2, RBR = 3, COMMA = 4, COLON = 5, SEMICOLON = 6, ARROW_LEFT = 7, ARROW_RIGHT = 8,
            PTRN_STAR = 9, PTRN_PLUS = 10, PTRN_ALT = 11, PTRN_OPTION = 12, KW_CONNECT = 13,
            KW_TO = 14, KW_LIST = 15, KW_GRAPHS = 16, KW_SELECT = 17, KW_FROM = 18, KW_WHERE = 19,
            KW_COUNT = 20, KW_EXISTS = 21, KW_ID = 22, LOWERCASE_WORD = 23, INTEGER = 24, NONTERMINAL = 25,
            STRING_DESC = 26, WS = 27;
    public static final int
            RULE_script = 0, RULE_statement = 1, RULE_stmt_connect = 2, RULE_stmt_list = 3,
            RULE_stmt_select = 4, RULE_stmt_pattern_decl = 5, RULE_object_expr = 6,
            RULE_from_expr = 7, RULE_where_expr = 8, RULE_vertices_expr = 9, RULE_count_expr = 10,
            RULE_exists_expr = 11, RULE_vertices_desc = 12, RULE_pair_vertices_desc = 13,
            RULE_single_vertex_desc = 14, RULE_path_desc = 15, RULE_vertex_cond = 16,
            RULE_pattern = 17, RULE_terminal = 18, RULE_epsilon = 19, RULE_vertex_name = 20;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public QueryLanguageParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "script", "statement", "stmt_connect", "stmt_list", "stmt_select", "stmt_pattern_decl",
                "object_expr", "from_expr", "where_expr", "vertices_expr", "count_expr",
                "exists_expr", "vertices_desc", "pair_vertices_desc", "single_vertex_desc",
                "path_desc", "vertex_cond", "pattern", "terminal", "epsilon", "vertex_name"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'='", "'('", "')'", "','", "':'", "';'", "'--|'", "'|->'", "'*'",
                "'+'", "'|'", "'?'", "'CONNECT'", "'TO'", "'LIST'", "'GRAPHS'", "'SELECT'",
                "'FROM'", "'WHERE'", "'COUNT'", "'EXISTS'", "'id'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "EQ", "LBR", "RBR", "COMMA", "COLON", "SEMICOLON", "ARROW_LEFT",
                "ARROW_RIGHT", "PTRN_STAR", "PTRN_PLUS", "PTRN_ALT", "PTRN_OPTION", "KW_CONNECT",
                "KW_TO", "KW_LIST", "KW_GRAPHS", "KW_SELECT", "KW_FROM", "KW_WHERE",
                "KW_COUNT", "KW_EXISTS", "KW_ID", "LOWERCASE_WORD", "INTEGER", "NONTERMINAL",
                "STRING_DESC", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "QueryLanguage.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ScriptContext script() throws RecognitionException {
        ScriptContext _localctx = new ScriptContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_script);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(47);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_CONNECT) | (1L << KW_LIST) | (1L << KW_SELECT) | (1L << NONTERMINAL))) != 0)) {
                    {
                        {
                            setState(42);
                            statement();
                            setState(43);
                            match(SEMICOLON);
                        }
                    }
                    setState(49);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(50);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(56);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case KW_CONNECT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(52);
                    stmt_connect();
                }
                break;
                case KW_LIST:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(53);
                    stmt_list();
                }
                break;
                case KW_SELECT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(54);
                    stmt_select();
                }
                break;
                case NONTERMINAL:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(55);
                    stmt_pattern_decl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Stmt_connectContext stmt_connect() throws RecognitionException {
        Stmt_connectContext _localctx = new Stmt_connectContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_stmt_connect);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(KW_CONNECT);
                setState(59);
                match(KW_TO);
                setState(60);
                match(STRING_DESC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Stmt_listContext stmt_list() throws RecognitionException {
        Stmt_listContext _localctx = new Stmt_listContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_stmt_list);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(62);
                match(KW_LIST);
                setState(63);
                match(KW_GRAPHS);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Stmt_selectContext stmt_select() throws RecognitionException {
        Stmt_selectContext _localctx = new Stmt_selectContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_stmt_select);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(KW_SELECT);
                setState(66);
                object_expr();
                setState(67);
                from_expr();
                setState(68);
                where_expr();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Stmt_pattern_declContext stmt_pattern_decl() throws RecognitionException {
        Stmt_pattern_declContext _localctx = new Stmt_pattern_declContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_stmt_pattern_decl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                match(NONTERMINAL);
                setState(71);
                match(EQ);
                setState(72);
                pattern(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Object_exprContext object_expr() throws RecognitionException {
        Object_exprContext _localctx = new Object_exprContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_object_expr);
        try {
            setState(77);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LBR:
                case LOWERCASE_WORD:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(74);
                    vertices_expr();
                }
                break;
                case KW_COUNT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(75);
                    count_expr();
                }
                break;
                case KW_EXISTS:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(76);
                    exists_expr();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final From_exprContext from_expr() throws RecognitionException {
        From_exprContext _localctx = new From_exprContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_from_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(KW_FROM);
                setState(80);
                match(STRING_DESC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Where_exprContext where_expr() throws RecognitionException {
        Where_exprContext _localctx = new Where_exprContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_where_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                match(KW_WHERE);
                setState(83);
                path_desc();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Vertices_exprContext vertices_expr() throws RecognitionException {
        Vertices_exprContext _localctx = new Vertices_exprContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_vertices_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                vertices_desc();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Count_exprContext count_expr() throws RecognitionException {
        Count_exprContext _localctx = new Count_exprContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_count_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(87);
                match(KW_COUNT);
                setState(88);
                vertices_desc();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Exists_exprContext exists_expr() throws RecognitionException {
        Exists_exprContext _localctx = new Exists_exprContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_exists_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                match(KW_EXISTS);
                setState(91);
                vertices_desc();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Vertices_descContext vertices_desc() throws RecognitionException {
        Vertices_descContext _localctx = new Vertices_descContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_vertices_desc);
        try {
            setState(95);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LBR:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(93);
                    pair_vertices_desc();
                }
                break;
                case LOWERCASE_WORD:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(94);
                    single_vertex_desc();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Pair_vertices_descContext pair_vertices_desc() throws RecognitionException {
        Pair_vertices_descContext _localctx = new Pair_vertices_descContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_pair_vertices_desc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                match(LBR);
                setState(98);
                vertex_name();
                setState(99);
                match(COMMA);
                setState(100);
                vertex_name();
                setState(101);
                match(RBR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Single_vertex_descContext single_vertex_desc() throws RecognitionException {
        Single_vertex_descContext _localctx = new Single_vertex_descContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_single_vertex_desc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(103);
                vertex_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Path_descContext path_desc() throws RecognitionException {
        Path_descContext _localctx = new Path_descContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_path_desc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                vertex_cond();
                setState(106);
                match(ARROW_LEFT);
                setState(107);
                pattern(0);
                setState(108);
                match(ARROW_RIGHT);
                setState(109);
                vertex_cond();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Vertex_condContext vertex_cond() throws RecognitionException {
        Vertex_condContext _localctx = new Vertex_condContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_vertex_cond);
        try {
            setState(120);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LOWERCASE_WORD:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(111);
                    vertex_name();
                }
                break;
                case LBR:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(112);
                    match(LBR);
                    setState(113);
                    vertex_name();
                    setState(114);
                    match(COLON);
                    setState(115);
                    match(KW_ID);
                    setState(116);
                    match(EQ);
                    setState(117);
                    match(INTEGER);
                    setState(118);
                    match(RBR);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PatternContext pattern() throws RecognitionException {
        return pattern(0);
    }

    private PatternContext pattern(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        PatternContext _localctx = new PatternContext(_ctx, _parentState);
        PatternContext _prevctx = _localctx;
        int _startState = 34;
        enterRecursionRule(_localctx, 34, RULE_pattern, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(136);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                    case 1: {
                        setState(125);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case LBR:
                            case LOWERCASE_WORD: {
                                setState(123);
                                terminal();
                            }
                            break;
                            case NONTERMINAL: {
                                setState(124);
                                match(NONTERMINAL);
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                        setState(128);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                            case 1: {
                                setState(127);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PTRN_STAR) | (1L << PTRN_PLUS) | (1L << PTRN_OPTION))) != 0))) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                            }
                            break;
                        }
                    }
                    break;
                    case 2: {
                        setState(130);
                        match(LBR);
                        setState(131);
                        pattern(0);
                        setState(132);
                        match(RBR);
                        setState(134);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                            case 1: {
                                setState(133);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PTRN_STAR) | (1L << PTRN_PLUS) | (1L << PTRN_OPTION))) != 0))) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                            }
                            break;
                        }
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(145);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(143);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                                case 1: {
                                    _localctx = new PatternContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_pattern);
                                    setState(138);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(139);
                                    match(PTRN_ALT);
                                    setState(140);
                                    pattern(3);
                                }
                                break;
                                case 2: {
                                    _localctx = new PatternContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_pattern);
                                    setState(141);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(142);
                                    pattern(2);
                                }
                                break;
                            }
                        }
                    }
                    setState(147);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final TerminalContext terminal() throws RecognitionException {
        TerminalContext _localctx = new TerminalContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_terminal);
        try {
            setState(150);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LOWERCASE_WORD:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(148);
                    match(LOWERCASE_WORD);
                }
                break;
                case LBR:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(149);
                    epsilon();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final EpsilonContext epsilon() throws RecognitionException {
        EpsilonContext _localctx = new EpsilonContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_epsilon);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(152);
                match(LBR);
                setState(153);
                match(RBR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Vertex_nameContext vertex_name() throws RecognitionException {
        Vertex_nameContext _localctx = new Vertex_nameContext(_ctx, getState());
        enterRule(_localctx, 40, RULE_vertex_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(155);
                match(LOWERCASE_WORD);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 17:
                return pattern_sempred((PatternContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean pattern_sempred(PatternContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 2);
            case 1:
                return precpred(_ctx, 1);
        }
        return true;
    }

    public static class ScriptContext extends ParserRuleContext {
        public ScriptContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode EOF() {
            return getToken(QueryLanguageParser.EOF, 0);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public List<TerminalNode> SEMICOLON() {
            return getTokens(QueryLanguageParser.SEMICOLON);
        }

        public TerminalNode SEMICOLON(int i) {
            return getToken(QueryLanguageParser.SEMICOLON, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_script;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterScript(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).exitScript(this);
        }
    }

    public static class StatementContext extends ParserRuleContext {
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public Stmt_connectContext stmt_connect() {
            return getRuleContext(Stmt_connectContext.class, 0);
        }

        public Stmt_listContext stmt_list() {
            return getRuleContext(Stmt_listContext.class, 0);
        }

        public Stmt_selectContext stmt_select() {
            return getRuleContext(Stmt_selectContext.class, 0);
        }

        public Stmt_pattern_declContext stmt_pattern_decl() {
            return getRuleContext(Stmt_pattern_declContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).exitStatement(this);
        }
    }

    public static class Stmt_connectContext extends ParserRuleContext {
        public Stmt_connectContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode KW_CONNECT() {
            return getToken(QueryLanguageParser.KW_CONNECT, 0);
        }

        public TerminalNode KW_TO() {
            return getToken(QueryLanguageParser.KW_TO, 0);
        }

        public TerminalNode STRING_DESC() {
            return getToken(QueryLanguageParser.STRING_DESC, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt_connect;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterStmt_connect(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).exitStmt_connect(this);
        }
    }

    public static class Stmt_listContext extends ParserRuleContext {
        public Stmt_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode KW_LIST() {
            return getToken(QueryLanguageParser.KW_LIST, 0);
        }

        public TerminalNode KW_GRAPHS() {
            return getToken(QueryLanguageParser.KW_GRAPHS, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt_list;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterStmt_list(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).exitStmt_list(this);
        }
    }

    public static class Stmt_selectContext extends ParserRuleContext {
        public Stmt_selectContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode KW_SELECT() {
            return getToken(QueryLanguageParser.KW_SELECT, 0);
        }

        public Object_exprContext object_expr() {
            return getRuleContext(Object_exprContext.class, 0);
        }

        public From_exprContext from_expr() {
            return getRuleContext(From_exprContext.class, 0);
        }

        public Where_exprContext where_expr() {
            return getRuleContext(Where_exprContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt_select;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterStmt_select(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).exitStmt_select(this);
        }
    }

    public static class Stmt_pattern_declContext extends ParserRuleContext {
        public Stmt_pattern_declContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode NONTERMINAL() {
            return getToken(QueryLanguageParser.NONTERMINAL, 0);
        }

        public TerminalNode EQ() {
            return getToken(QueryLanguageParser.EQ, 0);
        }

        public PatternContext pattern() {
            return getRuleContext(PatternContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt_pattern_decl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener)
                ((QueryLanguageListener) listener).enterStmt_pattern_decl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener)
                ((QueryLanguageListener) listener).exitStmt_pattern_decl(this);
        }
    }

    public static class Object_exprContext extends ParserRuleContext {
        public Object_exprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public Vertices_exprContext vertices_expr() {
            return getRuleContext(Vertices_exprContext.class, 0);
        }

        public Count_exprContext count_expr() {
            return getRuleContext(Count_exprContext.class, 0);
        }

        public Exists_exprContext exists_expr() {
            return getRuleContext(Exists_exprContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_object_expr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterObject_expr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).exitObject_expr(this);
        }
    }

    public static class From_exprContext extends ParserRuleContext {
        public From_exprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode KW_FROM() {
            return getToken(QueryLanguageParser.KW_FROM, 0);
        }

        public TerminalNode STRING_DESC() {
            return getToken(QueryLanguageParser.STRING_DESC, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_from_expr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryLanguageListener) ((QueryLanguageListener) listener).enterFrom_expr(this);
        }
